# painless-ghicon

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml
.github/workflows/: build-and-push.yml  ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: github.rs  lib.rs  pattern.rs
crates/web/: Cargo.toml
crates/web/src/: app.rs  avatar.rs  main.rs  templates.rs
