[package]
name = "painless-ghicon-web"
description = "Axum + HTMX web app that rounds the corners of GitHub identicon block patterns"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
html-escape.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
painless-ghicon-core.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
http-body-util.workspace = true
image.workspace = true
tower.workspace = true

[package.metadata.dist]
dist = false

[lints]
workspace = true
